2004-05-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXsocket.c (InfoGetHost): read host after arg count
	check. [Bug 930035] (teterin)

	* doc/TclX.n: doc and comment fixes
	* unix/tclXunixOS.c:
	* win/tclXwinOS.c:

2004-02-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclXwinOS.c (TclXOSkill): close process handle

2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.

2002-12-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXkeylist.c (ValidateKey): move isPath check outside
	of for loop.
	(DupKeyedListInternalRep): duplicate value object instead of
	directly incrementing refcount of existing object to stop memleak.
	(TclX_KeyedListGetKeys): simplify list result obj creation.
	(TclX_KeylkeysObjCmd): use obj-ified var set/get routines.

	* Makefile.in: add valgrind and valgrindtest targets

	* unix/INSTALL: remove references to Tk-required build

2002-11-12  Karl Lehenbauer <karl@procplace.com>

	* Makefile.in: Put some variables back in that were previously
	    found in Config.mk.  "make buildhelp" now works again.
	* configure:
	* configure.in: Moved the help dir to the top directory of the
	    TclX source code.  It was using a subdir that no longer exists.
	* unix/tools/bldmanhelp.tcl: Add "package require Tclx" and source
	    the help tools.
	* unix/tools/instcopy.tcl: Add "package require Tclx" and source
	    the TclX build utilities.
	* unix/tools/runbuildhelp.tcl: "driver" to run buildhelp since
	    we don't have a Tcl command line that can take the command
	    on the command line.

2002-11-03  Karl Lehenbauer <karl@procplace.com>

        * generic/tclXfilescan.c:    Applied patch to fileparse to use 
	  the public Tcl_RegExp interface instead of the private TclRegexp.  
	  Submitted by Reinhard Max (rmax) [Patch #631096]

2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4:
	* configure: